...
              Padding(
                padding: const EdgeInsets.all(8.0),
                child: Container(
                  color: Colors.transparent,
                  width: 350,
                  child: TextFormField(
                    key: const Key('user_name'),
                    validator: EmailFieldValidator.validate,
                    controller: _loginController.userName.value,
                    decoration: userNameInputDecoration(),
                  ),
                ),
              ),
...
              Padding(
                padding: const EdgeInsets.all(8.0),
                child: Container(
                  color: Colors.transparent,
                  width: 350,
                  child: TextFormField(
                    key: const Key('password'),
                    validator: PasswordFieldValidator.validate,
                    obscureText: !isVisiblePassword,
                    controller: _loginController.password.value,
                    decoration: InputDecoration(
                      suffixIcon: IconButton(
                        icon: Icon(
...
